# diesel-sqlite-session

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: comparison_benchmarks.rs  session_benchmarks.rs
mobile-tests/ios-smoke/: Package.swift
mobile-tests/ios-smoke/Sources/IOSSmoke/: IOSSmoke.swift
mobile-tests/ios-smoke/Tests/IOSSmokeTests/: IOSSmokeTests.swift
scripts/: install-hooks.sh  pre-commit  pre-push
scripts/ci/: run-ios-smoke-tests.sh
src/: apply.rs  errors.rs  ffi.rs  lib.rs  mobile_smoke.rs  session.rs
tests/: integration.rs  persona_emulation.rs  properties.rs
wasm-bench/: Cargo.toml
wasm-bench/src/: lib.rs
wasm-tests/: Cargo.toml
wasm-tests/src/: lib.rs
