[package]
name = "diesel-sqlite-session-wasm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diesel-sqlite-session = { path = ".." }
diesel = { git = "https://github.com/LucaCappelletti94/diesel", branch = "sqlite-session-changeset", features = ["sqlite"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
sqlite-wasm-rs = "0.5"
web-sys = { version = "0.3", features = ["console"] }
